--- a/Frontend/css/style.css
+++ b/Frontend/css/style.css
@@ -13,6 +13,19 @@ body{
     justify-content: space-around;
     text-shadow: 2px 2px 8px black;
 }
+.footer{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center;
+   height: 3rem;
+    background-color: rgb(50, 181, 50);
+    padding: 30px;
+    text-align: center;
+    font-size: 16px;
+    color: #fff;
+    margin-top: 7rem;    
+}
 
 .form {
     display: flex;
@@ -83,3 +96,13 @@ select:focus{
     padding: 10px 20px;
     line-height: 10px;
 }
+
+
+
+footer p {
+    margin-bottom: 20px;
+    line-height: 1.5;
+}
+
+
+
