Added admin panel

--- a/Frontend/css/style.css
+++ b/Frontend/css/style.css
@@ -24,7 +24,7 @@ body{
     text-align: center;
     font-size: 16px;
     color: #fff;
-    margin-top: 7rem;    
+    margin-top: 23%;    
 }
 
 .form {
